Closed Bug 1667723 Opened 4 years ago Closed 4 years ago

Unable to print from Outlook Web Access calendar after updating to Firefox 81

Categories

(Core :: Print Preview, defect, P1)

Firefox 81
Desktop
All
defect

Tracking

()

VERIFIED FIXED
83 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox81 + verified
firefox82 + verified
firefox83 + verified

People

(Reporter: dennis, Assigned: emilio)

References

(Regression, )

Details

(Keywords: regression, Whiteboard: [print2020_v82][old-ui+])

Attachments

(1 file)

After updating to Firefox 81, our users are no longer able to print from their OWA (Outlook Web Access) calendar. This also occurs on the latest Nightly.
When hitting the print button in the app's ui, the following is printed to the console.

Uncaught DOMException: A parameter or an operation is not supported by the underlying object
It references a dynamically created source file which only contains:
self.focus();window.print();

I have narrowed down the problem to the referenced pushlog.

Bugbug thinks this bug should belong to this component, but please revert this change in case of error.

Component: General → Console
Product: Firefox → DevTools
Component: Console → Print Preview
OS: Unspecified → All
Product: DevTools → Core
Hardware: Unspecified → Desktop

Hi Denis. Thanks for reporting this, it sounds bad.

(In reply to Dennis Lichtenthäler from comment #1)

I have narrowed down the problem to the referenced pushlog.

Which pushlog are you referring to? Did you mean to link to one?

Sorry, I missed that you'd added it to the URL field. Thanks!

Emilio, this looks like more fallout from bug 1636728. Are you able to take a look?

Severity: -- → S2
Priority: -- → P1
Regressed by: 1636728
Whiteboard: [print2020_v82][old-ui+]
Has Regression Range: --- → yes

[Tracking Requested - why for this release]: print regression on major site

ni for comment 5.

Flags: needinfo?(emilio)

I created an account for https://outlook.live.com/ , clicked the calendar icon at the bottom left, selected to print, left all app print settings with their defaul values (so View: Month), and clicked the print button. This is on macOS, so I then got the system print dialog and selected to save to PDF. The resulting PDF had two pages. The first looked fine, I guess, with the days through the 17th of the month displayed. The second page was blank, which is presumably a separate bug. I did not get the DOMException from comment 1, however.

Perhaps this is a Windows only bug? Or perhaps the steps above are not the correct steps to reproduce the bug?

I have seen this bug on Windows and Linux and so I assumed, it was rather universal.

We have, however, not been able to reproduce the problem on the Microsoft-hosted version. We are hosting our own Exchange 2016 (updated to the latest version).

The steps to reproduce seem about right. After selecting the calendar from the top left navigation, we hit the print button. This displays print settings and a preview. After clicking print again, older Firefox versions show the print dialog, newer versions don’t show any visible reaction (other than the console output mentioned above).

Is there any chance I could get access to a test account or such to reproduce and investigate this? I only have access to the Microsoft hosted version.

Flags: needinfo?(dennis)
Assignee: nobody → emilio

(In reply to Emilio Cobos Álvarez (:emilio) from comment #11)

Is there any chance I could get access to a test account or such to reproduce and investigate this? I only have access to the Microsoft hosted version.

Sure! How can I get it to you in a less public way?

Flags: needinfo?(dennis)

Shot you an e-mail with login details, hope that's okay!

Matches other browsers and fixes the regression. Print dialogs really
aren't an auxiliary navigation, even though we implement them similarly.

Attachment #9178450 - Attachment description: Bug 1667723 - Don't block opening the print dialog if the page sandbox auxiliary navigations. r=smaug,nika → Bug 1667723 - Don't block opening the print dialog if the page sandboxes auxiliary navigations. r=smaug,nika

Could repro, fix+test is up for review. Thanks Dennis!

Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Flags: needinfo?(emilio)

Comment on attachment 9178450 [details]
Bug 1667723 - Don't block opening the print dialog if the page sandbox auxiliary navigations. r=smaug,nika

Beta/Release Uplift Approval Request

  • User impact if declined: Comment 0.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: Open data:text/html,<iframe onload="this.contentWindow.print()" sandbox="allow-same-origin allow-scripts allow-modals" src="about:blank" width="0" height="0"></iframe>, should see a print dialog.
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): If printing, then proceed... :-)
  • String changes made/needed: none
Attachment #9178450 - Flags: approval-mozilla-release?
Attachment #9178450 - Flags: approval-mozilla-beta?
Attachment #9178450 - Attachment description: Bug 1667723 - Don't block opening the print dialog if the page sandboxes auxiliary navigations. r=smaug,nika → Bug 1667723 - Don't block opening the print dialog if the page sandbox auxiliary navigations. r=smaug,nika
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/737988e63b0b Don't block opening the print dialog if the page sandbox auxiliary navigations. r=nika

Comment on attachment 9178450 [details]
Bug 1667723 - Don't block opening the print dialog if the page sandbox auxiliary navigations. r=smaug,nika

Approved for 82.0b5. Would be great if we could get some QA verification ahead of tomorrow's 81.0.1 go-to-build if at all possible.

Attachment #9178450 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify+
QA Whiteboard: [qa-triaged]
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch

Thanks to everyone for the quick fix! is there any chance to get this into a subsequent 81.0.x update? It would be a pain to go back to a previous Firefox version (not speaking of the security implications).

(In reply to Dennis Lichtenthäler from comment #21)

Thanks to everyone for the quick fix! is there any chance to get this into a subsequent 81.0.x update?

That's the plan. If all goes as planned, 81.0.1 will ship tomorrow with this fix included.

Comment on attachment 9178450 [details]
Bug 1667723 - Don't block opening the print dialog if the page sandbox auxiliary navigations. r=smaug,nika

Approved for 81.0.1.

Attachment #9178450 - Flags: approval-mozilla-release? → approval-mozilla-release+

Confirming this issue as verified fixed on 81.0.1(20200930150533), 82.0b5(20200929175845) and 83.0a1(20200930214529) with Windows 10x64 ,Ubuntu 18.04 and macOS 10.15.7.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: