Bug 1667723 - Don't block opening the print dialog if the page sandbox auxiliary navigations. r=nika, a=RyanVM

Matches other browsers and fixes the regression. Print dialogs really
aren't an auxiliary navigation, even though we implement them similarly.

Differential Revision: https://phabricator.services.mozilla.com/D91739