toolkit/components/printing/tests/browser_window_print.js
@@ -115,3 +115,37 @@ add_task(async function test_print_delayed_during_load() {
     }
   );
 });
+
+add_task(async function test_print_on_sandboxed_frame() {
+  // window.print() only shows print preview when print.tab_modal.enabled is
+  // true.
+  await SpecialPowers.pushPrefEnv({
+    set: [["print.tab_modal.enabled", true]],
+  });
+
+  is(
+    document.querySelector(".printPreviewBrowser"),
+    null,
+    "There shouldn't be any print preview browser"
+  );
+
+  await BrowserTestUtils.withNewTab(
+    `${TEST_PATH}file_window_print_sandboxed_iframe.html`,
+    async function(browser) {
+      info(
+        "Waiting for the first window.print() to run and ensure we're showing the preview..."
+      );
+
+      await BrowserTestUtils.waitForCondition(
+        () => !!document.querySelector(".printPreviewBrowser")
+      );
+
+      isnot(
+        document.querySelector(".printPreviewBrowser"),
+        null,
+        "Should open the print preview correctly"
+      );
+      gBrowser.getTabDialogBox(browser).abortAllDialogs();
+    }
+  );
+});
